# py-tools

./: .gitignore  README.md  main.py  pyproject.toml
config/: db.py
docker/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
server/: __init__.py  routes.py
shared_utils/: db.py
src/: __main__.py  app.py
src/api/: API.md
src/config/: db.py
src/models/: tool.py
src/queries/: get_tool_path.py  get_tools.py  sync_tools.py
src/server/: __init__.py  routes.py  server.py
src/server/static/: index.css  index.js  layout.css  socketConfig.js
src/server/templates/: index.html  layout.html
src/task_manager/: slog.py  task_manager.py
src/tasks/: background_tasks.py  dispatch_out_tools.py  dispatch_task_end.py  update_tool_scripts.py
src/utils/: get_local_tools.py
static/: layout.css
templates/: index.html  layout.html
tests/: fix_test_pg.py  test_get_local_tools.py  test_get_tool_path.py  test_pg.py  test_query_get_tools.py  test_query_sync_tools.py  test_sqlite.py  test_start_task.py
tools/: db.py  err_tool.py  globals.py  test_tool.py  tool_1.py  tool_2.py  tool_3.py  youtubeShortExtractor.py
