[project]
name = "py-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "gevent>=24.11.1",
    "gevent-websocket>=0.10.1",
    "psycopg2>=2.9.10",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.38",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
